# svelte-rust-todo

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 20230726223508_todos.sql
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  +page.ts
