[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["form"] }
axum-error = "0.2"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version="0.3", default-features = false, features=["fmt"] }
